<resources>
    <string name="app_name">Share Rides</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Register.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="required_emailid_error">Please enter your Email Id.</string>
    <string name="invalid_emailid_error">Your Email Id is Invalid.</string>
    <string name="invalid_login_credentials">Enter both credentials.</string>
    <string name="required_all_fields_error">All fields are required.</string>
    <string name="password_not_match">Both password doesn\'t match.</string>
    <string name="label_terms">Please select Terms and Conditions.</string>
    <string name="driver">Driver</string>
    <string name="rider">Rider</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_signout">Sign Out</string>
    <string name="title_activity_view_ride_requests">View Requests</string>

</resources>
